force-app/main/default/objects/UE_Related_List_Column__mdt/UE_Related_List_Column__mdt.object-meta.xml
<CustomObject>
    <description>The columns for the ultra enhanced related list</description>
    <label>UE Related List Column</label>
    <pluralLabel>UE Related List Columns</pluralLabel>
</CustomObject>