force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Allow_Editing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the row to be edited in the data table</description>
    <inlineHelpText>Allows the row to be edited in the data table</inlineHelpText>
    <label>Allow Editing?</label>
    <type>Checkbox</type>
</CustomField>