force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Allow_Sorting__c.field-meta.xml
<CustomField>
    <fullName>Allow_Sorting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows user to determine whether or not the field can be sorted on the data table</description>
    <inlineHelpText>Allows user to determine whether or not the field can be sorted on the data table</inlineHelpText>
    <label>Allow Sorting?</label>
    <type>Checkbox</type>
</CustomField>