force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Allow_Text_Wrap__c.field-meta.xml
<CustomField>
    <fullName>Allow_Text_Wrap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the text for the column to be wrapped in the datatable</description>
    <inlineHelpText>Allow the text for the column to be wrapped in the datatable</inlineHelpText>
    <label>Allow Text Wrap</label>
    <type>Checkbox</type>
</CustomField>