force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Column_Order__c.field-meta.xml
<CustomField>
    <fullName>Column_Order__c</fullName>
    <description>The order the columns will appear in on the related list</description>
    <inlineHelpText>The order the columns will appear in on the related list</inlineHelpText>
    <label>Column Order</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>