force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Column_Type__c.field-meta.xml
<CustomField>
    <fullName>Column_Type__c</fullName>
    <description>The type of data you would like displayed in the column</description>
    <inlineHelpText>The type of data you would like displayed in the column</inlineHelpText>
    <label>Column Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>action</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
                <default>true</default>
                <label>boolean</label>
            </value>
            <value>
                <fullName>date-local</fullName>
            </value>
            <value>
                <fullName>decimal</fullName>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>