force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The developer name for the field</description>
    <inlineHelpText>The developer name for the field</inlineHelpText>
    <label>Field Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>