force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Initial_Column_Width__c.field-meta.xml
<CustomField>
    <fullName>Initial_Column_Width__c</fullName>
    <description>The initial width of the data table column</description>
    <inlineHelpText>The initial width of the data table column</inlineHelpText>
    <label>Initial Column Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>