force-app/main/default/objects/UE_Related_List_Column__mdt/fields/Object_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Developer_Name__c</fullName>
    <description>The developer name of the object this record is tied to</description>
    <inlineHelpText>The developer name of the object this record is tied to</inlineHelpText>
    <label>Object Developer Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>