force-app/main/default/objects/UE_Related_List_Column__mdt/fields/URL_Id__c.field-meta.xml
<CustomField>
    <fullName>URL_Id__c</fullName>
    <description>The field that holds the Id for the URL for URL columns</description>
    <inlineHelpText>The field that holds the Id for the URL for URL columns</inlineHelpText>
    <label>URL Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>